--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -34,6 +35,11 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-database-ktx'
+    implementation platform('com.google.firebase:firebase-bom:31.0.2')
+
+    implementation "androidx.activity:activity-ktx:1.3.0"
+
     implementation 'androidx.room:room-common:2.4.3'
     implementation("androidx.room:room-runtime:2.4.3")
     annotationProcessor("androidx.room:room-compiler:2.4.3")
@@ -51,4 +57,13 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.room:room-testing:2.4.3"
+    constraints {
+        implementation('androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1') {
+            because 'insert explanation here'
+        }
+    }
+    //def lifecycle_version = "2.4.0"
+    //implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    //implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 }
