--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation platform('com.google.firebase:firebase-bom:31.0.2')
 
@@ -42,6 +46,10 @@ dependencies {
 
     implementation 'androidx.room:room-common:2.4.3'
     implementation("androidx.room:room-runtime:2.4.3")
+    implementation 'androidx.annotation:annotation:1.5.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     annotationProcessor("androidx.room:room-compiler:2.4.3")
     // To use Kotlin annotation processing tool (kapt)
     kapt("androidx.room:room-compiler:2.4.3")
