--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ android {
 }
 
 dependencies {
+    //for http requests
+    implementation 'com.github.kittinunf.fuel:fuel:2.3.1'
+    implementation 'com.google.code.gson:gson:2.8.8'
+
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation platform('com.google.firebase:firebase-bom:31.0.2')
