--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,12 +41,14 @@ dependencies {
     //for http requests
     implementation 'com.github.kittinunf.fuel:fuel:2.3.1'
     implementation 'com.google.code.gson:gson:2.8.8'
+    implementation "androidx.browser:browser:1.4.0"
+    implementation 'com.github.scribejava:scribejava-core:8.3.0'
 
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation platform('com.google.firebase:firebase-bom:31.0.2')
 
-    implementation "androidx.activity:activity-ktx:1.3.0"
+    implementation "androidx.activity:activity-ktx:1.3.1"
 
     implementation 'androidx.room:room-common:2.4.3'
     implementation("androidx.room:room-runtime:2.4.3")
