--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,14 +26,13 @@
 
         <activity
             android:name=".ui.SignUpActivity"
-            android:exported="false"></activity>
+            android:exported="true"></activity>
 
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+            android:name=".fitbit.AuthenticationActivity"
+            android:launchMode="singleInstance"
+            android:exported="true"
+            android:autoVerify="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -42,8 +41,17 @@
 
                 <data
                     android:scheme="https"
-                    android:host="alertness-level-monitor.com" />
+                    android:host="alertness-level-monitor.com"
+                    android:pathPrefix="/callback" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
         </activity>
 
         <service
