--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
     }
 }
 
+
 dependencies {
     //for http requests
     implementation 'com.github.kittinunf.fuel:fuel:2.3.1'
@@ -56,7 +57,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
     annotationProcessor("androidx.room:room-compiler:2.4.3")
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     // To use Kotlin annotation processing tool (kapt)
     kapt("androidx.room:room-compiler:2.4.3")
 
