--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,14 @@
         android:theme="@style/Theme.Testing"
         tools:targetApi="31">
         <activity
+            android:name=".ui.ChartActivity"
+            android:exported="false"
+            android:label="@string/title_activity_chart">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ui.SignInActivity"
             android:exported="true">
             <intent-filter>
@@ -23,16 +31,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.SignUpActivity"
-            android:exported="true"></activity>
-
+            android:exported="true" />
         <activity
             android:name=".fitbit.AuthenticationActivity"
-            android:launchMode="singleInstance"
+            android:autoVerify="true"
             android:exported="true"
-            android:autoVerify="true">
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -40,12 +46,11 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:scheme="https"
                     android:host="alertness-level-monitor.com"
-                    android:pathPrefix="/callback" />
+                    android:pathPrefix="/callback"
+                    android:scheme="https" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
