--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,8 @@ android {
 
 
 dependencies {
-    //for http requests
+    implementation "androidx.activity:activity:1.6.0-alpha05"
+    //for http requests:
     implementation 'com.github.kittinunf.fuel:fuel:2.3.1'
     implementation 'com.google.code.gson:gson:2.8.8'
     implementation "androidx.browser:browser:1.4.0"
@@ -58,6 +59,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
+    implementation "androidx.fragment:fragment-ktx:1.3.0"
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
     annotationProcessor("androidx.room:room-compiler:2.4.3")
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
