--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,7 +16,7 @@
         android:theme="@style/Theme.Testing"
         tools:targetApi="31">
         <activity
-            android:name=".ui.ChartActivity"
+            android:name=".ChartActivity"
             android:exported="false"
             android:label="@string/title_activity_chart">
             <meta-data
@@ -23,16 +24,12 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ui.SignInActivity"
+            android:name=".SignInActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
-            android:name=".ui.SignUpActivity"
+            android:name=".SignUpActivity"
             android:exported="true" />
         <activity
             android:name=".fitbit.AuthenticationActivity"
@@ -57,6 +54,11 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <service
