--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.gms.google-services'
+    //id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -51,6 +52,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.0.2')
 
     implementation "androidx.activity:activity-ktx:1.3.1"
+    implementation 'me.relex:circleindicator:2.1.6'
 
     implementation 'androidx.room:room-common:2.4.3'
     implementation("androidx.room:room-runtime:2.4.3")
@@ -58,6 +60,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    //viewpager2
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+//indicator
+    implementation 'me.relex:circleindicator:2.1.4'
+//lottie
+    implementation "com.airbnb.android:lottie:3.4.1"
+//datastore
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha02"
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     implementation "androidx.fragment:fragment-ktx:1.3.0"
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
