--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,6 +15,15 @@
         android:theme="@style/Theme.Testing"
         tools:targetApi="31">
         <activity
+            android:name=".ui.onboarding.ConsentActivity"
+            android:exported="false"
+            android:label="@string/title_activity_consent"
+            android:theme="@style/Theme.Testing.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ChartActivity"
             android:exported="false"
             android:label="@string/title_activity_chart">
@@ -25,9 +33,7 @@
         </activity>
         <activity
             android:name=".SignInActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".SignUpActivity"
             android:exported="true" />
@@ -54,6 +60,7 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
