--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     implementation "androidx.fragment:fragment-ktx:1.3.0"
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
+    implementation 'androidx.preference:preference:1.1.+'
+    implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     annotationProcessor("androidx.room:room-compiler:2.4.3")
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     // To use Kotlin annotation processing tool (kapt)
