--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,8 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     // To use Kotlin annotation processing tool (kapt)
     kapt("androidx.room:room-compiler:2.4.3")
+    implementation 'com.ogaclejapan.smarttablayout:library:1.2.1@aar'
+
 
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation("androidx.room:room-ktx:2.4.3")
