--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,10 @@ dependencies {
 
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
     implementation 'com.google.firebase:firebase-database-ktx'
+    //implementation 'com.firebaseui:firebase-ui-database:6.2.1'
     implementation platform('com.google.firebase:firebase-bom:31.0.2')
 
+    implementation("androidx.cardview:cardview:1.0.0")
     implementation "androidx.activity:activity-ktx:1.3.1"
     implementation 'me.relex:circleindicator:2.1.6'
 
