--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
+        // Add the dependency for the Crashlytics Gradle plugin
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.5'
         //classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.3.1'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
