--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,16 @@
             </intent-filter>
         </activity>
 
+        <receiver android:name="com.example.testing.BootReceiver" android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name="com.example.testing.AlarmReceiver" android:enabled="true"/>
+
+
         <service
             android:name=".MyAccessibilityService"
             android:exported="true"
