--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,14 +49,14 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name="com.example.testing.BootReceiver" android:enabled="true"
+        <receiver android:name="com.example.testing.notifications.BootReceiver" android:enabled="true"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
 
-        <receiver android:name="com.example.testing.AlarmReceiver" android:enabled="true"/>
+        <receiver android:name="com.example.testing.notifications.AlarmReceiver" android:enabled="true"/>
 
 
         <service
