--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ plugins {
 
 android {
     namespace 'com.example.testing'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.testing"
         minSdk 24
-        targetSdk 32
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -37,18 +37,20 @@ android {
     buildFeatures {
         viewBinding true
     }
+    buildToolsVersion '33.0.0'
 }
 
 
 dependencies {
-    implementation "androidx.activity:activity:1.6.0-alpha05"
+
+    implementation "androidx.activity:activity:1.7.2-alpha06"
     //for http requests:
     implementation 'com.github.kittinunf.fuel:fuel:2.3.1'
-    implementation 'com.google.code.gson:gson:2.8.8'
-    implementation "androidx.browser:browser:1.3.0"
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation "androidx.browser:browser:1.4.0"
     implementation 'com.github.scribejava:scribejava-core:8.3.0'
 
-    implementation 'androidx.work:work-runtime-ktx:2.7.1'
+    implementation 'androidx.work:work-runtime-ktx:2.8.1'
     implementation 'com.google.firebase:firebase-database-ktx'
     //implementation 'com.firebaseui:firebase-ui-database:6.2.1'
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
@@ -59,48 +61,47 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
     implementation("androidx.cardview:cardview:1.0.0")
-    implementation "androidx.activity:activity-ktx:1.3.1"
+    implementation "androidx.activity:activity-ktx:1.7.2"
     implementation 'me.relex:circleindicator:2.1.6'
 
-    implementation 'androidx.room:room-common:2.4.3'
-    implementation("androidx.room:room-runtime:2.4.3")
     implementation 'androidx.annotation:annotation:1.5.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
     //viewpager2
     implementation "androidx.viewpager2:viewpager2:1.0.0"
 //indicator
-    implementation 'me.relex:circleindicator:2.1.4'
+    implementation 'me.relex:circleindicator:2.1.6'
 //lottie
     implementation "com.airbnb.android:lottie:3.4.1"
 //datastore
-    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha02"
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
-    implementation "androidx.fragment:fragment-ktx:1.3.0"
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
-    implementation 'androidx.preference:preference:1.1.+'
+    implementation "androidx.datastore:datastore-preferences:1.1.0-alpha04"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
+    implementation "androidx.fragment:fragment-ktx:1.6.0"
+    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
+    implementation 'androidx.preference:preference:1.2.0'
     implementation 'androidx.preference:preference-ktx:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    annotationProcessor("androidx.room:room-compiler:2.4.3")
+    annotationProcessor("androidx.room:room-compiler:2.5.2")
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     // To use Kotlin annotation processing tool (kapt)
-    kapt("androidx.room:room-compiler:2.4.3")
+    kapt("androidx.room:room-compiler:2.5.2")
     implementation 'com.ogaclejapan.smarttablayout:library:1.2.1@aar'
 
 
     // optional - Kotlin Extensions and Coroutines support for Room
-    implementation("androidx.room:room-ktx:2.4.3")
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation("androidx.room:room-ktx:2.5.2")
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
     // optional - Test helpers
-    testImplementation("androidx.room:room-testing:2.4.3")
+    testImplementation("androidx.room:room-testing:2.5.2")
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.room:room-testing:2.4.3"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation "androidx.room:room-testing:2.5.2"
     constraints {
         implementation('androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1') {
             because 'insert explanation here'
